--- a/InstaStay/Areas/Customer/Views/Home/Index.cshtml
+++ b/InstaStay/Areas/Customer/Views/Home/Index.cshtml
@@ -95,7 +95,7 @@
                         </div>
                     </div>
                     <div class="card-footer text-center bg-light">
-                        <a asp-action="Hotel" asp-route-HotelId="@hotel.Id" class="btn btn-outline-primary">View Details</a>
+                        <a asp-action="HotelDetails" asp-controller="BrowseHotel" asp-route-HotelId="@hotel.Id" class="btn btn-outline-primary">View Details</a>
                     </div>
                 </div>
             </div>
