--- a/InstaStay/Areas/HotelManager/Views/ManageRooms/ShowAllRoomImages.cshtml
+++ b/InstaStay/Areas/HotelManager/Views/ManageRooms/ShowAllRoomImages.cshtml
@@ -7,7 +7,7 @@
 <div class="container mt-4">
     <div class="d-flex justify-content-between align-items-center mb-3">
         <h2 class="text-primary"><i class="fas fa-images"></i> Room Images</h2>
-        <a asp-action="Create" class="btn btn-success">
+        <a asp-action="AddRoomImage" class="btn btn-success">
             <i class="fas fa-plus"></i> Add New Image
         </a>
     </div>
